# ChatAppGUI

./: .gitignore  .gitpod.yml  About.cpp  About.ui  CMakeLists.txt  CMakeLists.txt.user.c5bf526  CMakeLists.txt.user.fe8611e  ChatWidget.h  ContactWidget.ui  Helper.h  PrivacySettings.ui  README.md  assets.qrc  chatcard.cpp  chatcard.h  chatcard.ui  chatlist.cpp  chatlist.h  chatlist.ui  chatroommenu.cpp  chatroommenu.h  chatroommenu.ui  chatwidget.cpp  chatwidget.ui  deletedFromUI.txt  header.cpp  header.h  header.ui  img.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recorder.cpp  recorder.h  recording.cpp  recording.h  recording.ui  res.qrc  sending.cpp  (+5 more)
.devcontainer/: devcontainer.json
icons/: resources.qrc  style.qss
src/: ChatRoom.cpp  ChatRoom.h  ChatRoomModel.cpp  ChatRoomModel.h  Database.cpp  Database.h  Date.cpp  Date.h  Group.cpp  Group.h  Message.cpp  Message.h  MessageModel.cpp  MessageModel.h  Privacy.cpp  Privacy.h  SearchEngine.cpp  SearchEngine.h  Status.cpp  Status.h  Story.cpp  Story.h  User.cpp  User.h  UserProfileDescription.cpp  UserProfileDescription.h  main.cpp
src/data/: chatRooms.json  currentUser.json  users.json
ui/AddContact/: addcontact.cpp  addcontact.h  addcontact.ui
ui/AddStoryPage/: AddStoryPage.cpp  AddStoryPage.h  addStoryPage.ui
ui/ChatRoom/: ChatRoom.h  chatroom.cpp  chatroom.ui
ui/ChatRoom/Footer/: blockedwidget.cpp  blockedwidget.h  blockedwidget.ui  blockerwidget.cpp  blockerwidget.h  blockerwidget.ui  currentselectedcontainer.cpp  currentselectedcontainer.h  currentselectedcontainer.ui  filescomponent.cpp  filescomponent.h  filescomponent.ui  photocomponent.cpp  photocomponent.h  photocomponent.ui  recorder.cpp  recorder.h  recording.cpp  recording.h  recording.ui  sending.cpp  sending.h  sending.ui
ui/CreateGroup/: creategroup.cpp  creategroup.h  creategroup.ui
ui/Login/: login.cpp  login.h  login.ui
ui/Privacy/: ContactWidget.cpp  ContactWidget.h  ContactWidget.ui  PrivacySettings.cpp  PrivacySettings.h  PrivacySettings.ui
ui/Search/: search.cpp  search.h  search.ui
ui/Settings/: settings.cpp  settings.h  settings.ui
ui/SignUp/: signup.cpp  signup.h  signup.ui
ui/StatusWindow/: StatusWindow.cpp  StatusWindow.h  StatusWindow.ui
ui/TestWS/: testws.cpp  testws.h  testws.ui
(+61 files in other folders)
